@@ -1,5 +1,8 @@
 2006-12-17  Matthias Clasen  <mclasen@redhat.com>
 
+	* glib/gspawn.c: Fix the recent fdwalk()-related changes
+	to not break mapping-test.  (#286838, Marco Barisione)
+
 	* glib/gstring.c (g_string_chunk_new): Don't shadow size.
 	(#386760, Kazuki IWAMOTO)
 
